[project]
name = "pyromod"
version = "3.1.5"
description = "A monkeypatcher add-on for Pyrogram that does conversation handling"
authors = [
    { name = "Pauxis", email = "pauxiscezar@gmail.com" }
]
dependencies = [
    { git = "https://github.com/TelegramPlayGround/pyrogram.git", tag = "2.0.106-TL-177" }
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
